--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,38 +1,137 @@
 .robot-container {
+    position: fixed;
+    top:  60px;
+    left: 50%;
+    transform: translate(-50%,0%);
+    width: 700px;
+    height: 700px;
 }
 
 .robot-face-shape {
+    position: fixed;
+    top:  50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 500px;
+    height: 500px;
+    background: #333333;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #dd1818, #333333);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #dd1818, #333333); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border: 10px;
+    border-color: blueviolet;
+    border-style:solid;
+    border-radius: 5ex; 
 }
 
 .robot-eye-left {
+    object-fit: cover;
+    background-image: url("https://picsum.photos/50/100");
+    opacity: 0.5;
+    position: absolute;
+    left:20%; 
+    top:20%;
+    width: 50px;
+    height: 100px;
+    border-radius: 50px / 100px; 
 }
 
 .robot-eye-right {
+    object-fit: cover;
+    background-image: url("https://picsum.photos/50/100");
+    opacity: 0.5;
+    position: absolute;
+    right:20%; 
+    top:20%;
+    width: 50px;
+    height: 100px;
+    border-radius: 50px / 100px; 
 }
 
 .robot-ear-left {
+    box-sizing: border-box;
+    position: absolute;
+    left:0%; 
+    top:50%;
+    width: 0;
+    height: 0;
+    border-top: 50px solid transparent;
+    border-right: 100px solid green;
+    border-bottom: 50px solid transparent;
 }
 
 .robot-ear-right {
+    box-sizing: border-box;
+    position: absolute;
+    right:0%; 
+    top:50%;
+    width: 0;
+    height: 0;
+    border-top: 50px solid transparent;
+    border-left: 100px solid lightblue;
+    border-bottom: 50px solid transparent;
 }
 
+
 .robot-nose {
+    position: absolute;
+    left:200px; 
+    top:50%;
+    border-bottom: 100px solid grey;
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    height: 0;
+    width: 100px;
 }
 
 .robot-teeth {
+    position: absolute;
+    left:10%;
+    top: 75%;
+    width: 80%;
+    height: 10%;
+    background: black;
+    display:flex;
+    justify-content: space-evenly;
 }
 
 .robot-tooth {
+    width: 5%;
+    height: 100%;
+    background: white;
+    align-items: flex-end;
 }
+
+
 
 .robot-hair-style {
+    position: absolute;
+    left:100px;
+    top: 50px;
+    width: 500px;
+    display:flex;
+    justify-content: space-evenly;
+
 }
 
+
 .robot-hair-one {
+    
+    width: 50px;
+    height: 50px;
+    background: cyan;
+    border-radius: 50%
 }
 
 .robot-hair-two {
+    width: 50px;
+    height: 50px;
+    background: cyan;
+    border-radius: 50%
 }
 
 .robot-hair-three {
+    width: 50px;
+    height: 50px;
+    background: cyan;
+    border-radius: 50%
 }
