--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -30,8 +30,8 @@
     position: absolute;
     left:20%; 
     top:20%;
-    width: 50px;
-    height: 100px;
+    width: 2rem;
+    height: 4rem;
     border-radius: 50px / 100px; 
 }
 
@@ -42,8 +42,8 @@
     position: absolute;
     right:20%; 
     top:20%;
-    width: 50px;
-    height: 100px;
+    width: 2rem;
+    height: 4rem;
     border-radius: 50px / 100px; 
 }
 
